--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,10 @@ notifications:
 
 before_script:
   - mysql -e 'create database ciims_test;'          # Create Database
+  - ls
   - cd protected/runtime/                           # Download Yii Framework to Runtime Directory
   - git clone git://github.com/yiisoft/yii.git yii
   - cd ../
-  - ./yiic migrate up --interactive=0               # Run Migrations
-  - cd tests
+  - php yiic.php migrate up --interactive=0         # Run Migrations
+  - cd tests                                        # Navigate to the Tests Directory to run the tests
   
