--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: php
 branches:
   only:
     - master
-    - develop    
+    - develop
+        
 php:
   - 5.2
   - 5.3
@@ -24,9 +25,6 @@ before_script:
   - mysql -e 'create database ciims_test;'          # Create Database
   - cd protected/runtime/                           # Download Yii Framework to Runtime Directory
   - git clone git://github.com/yiisoft/yii.git yii
-  - cd ../config
-  - ln -s test.php main.php
-  - cd ..
-  - php yiic.php migrate up --interactive=0         # Run Migrations
+  - cd ../
+  - php yiic-test.php migrate up --interactive=0    # Run Migrations
   - cd tests                                        # Navigate to the Tests Directory to run the tests
-  
