--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ notifications:
     on_failure: never
 
 before_script:
+  - pear install phpunit/PHPUnit_Selenium
   - mysql -e 'create database ciims_test;'          # Create Database
   - cd protected/runtime/                           # Download Yii Framework to Runtime Directory
   - git clone git://github.com/yiisoft/yii.git yii
