--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ notifications:
     on_failure: never
 
 before_script:
-  - pear install phpunit/PHPUnit_Selenium
+  - pear channel-discover pear.phpunit.de           # Selinium/PHPUnit Channel
+  - pear install phpunit/PHPUnit_Selenium           # Add Selinium
   - mysql -e 'create database ciims_test;'          # Create Database
   - cd protected/runtime/                           # Download Yii Framework to Runtime Directory
   - git clone git://github.com/yiisoft/yii.git yii
