--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: php
 
+env:
+  secure: "Ug1yifDS73wE4wF7k+EyC42NKr8BGI0Z7p3O1swFt2+psDvUk+b8QCTOqRz1\nig0kdbYUGtvbBkc1H8SvSR8yEjV/pDPi2+b94hv2NwXzQ40C04f9jp16J67O\nT+iE/cczMInpwtLZoh8eax6BOIRglrQ3V6B211FLt513RbbHHqU="
+  secure: "RcFoZDD5ezk3v7qhrzna+6q/WisX08zRkRHlpQbQJqQG09nFllMZfA6EyblL\n/igIrS2RaqJmaOrCLb2BmE1s8yIIrXsFfkivyL5PmuEUVNKM5hovTmODIBeT\nTiY5rzIsX6jt6ZGrOOPqXOdKNOhhcp5m3ffzSscOfjitnSriWuM="
+
 branches:
   only:
     - master
@@ -29,3 +33,15 @@ before_script:
   - cd ../
   - php yiic-test.php migrate up --interactive=0    # Run Migrations
   - cd tests                                        # Navigate to the Tests Directory to run the tests
+
+after_success:
+  - echo "Host erianna" >> ~/.ssh/config            # Add necessary SSH credentials
+  - echo "    Hostname erianna.com" >> ~/.ssh/config
+  - echo "    User $USERNAME" >> ~/.ssh/config
+  - echo "    StrictHostKeyChecking no" >> ~/.ssh/config
+  - echo "    UserKnownHostsFile=/dev/null" >> ~/.ssh/config
+  - gem install capistrano                          # Install Capistrano for Automated Deployment
+  - cd ../                                          # Get the root Directory
+  - git rev-parse --abbrev-ref HEAD > branch        # Derive the current branch name
+  - ls -lah 
+  - cat branch
