--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ notifications:
     on_success: change
     on_failure: never
 
+                                                    # Install the necessary scripts for running the unit tests
 before_script:
   - pear channel-discover pear.phpunit.de | cat     # Selinium/PHPUnit Channel
   - pear install phpunit/PHPUnit_Selenium | cat     # Add Selinium
@@ -33,6 +34,7 @@ before_script:
   - php yiic-test.php migrate up --interactive=0    # Run Migrations
   - cd tests                                        # Navigate to the Tests Directory to run the tests
 
+                                                    # Automate the deployment process for develop/master
 after_success:
   - echo "Host erianna" >> ~/.ssh/config            # Add necessary SSH credentials
   - echo "    Hostname erianna.com" >> ~/.ssh/config
@@ -42,4 +44,7 @@ after_success:
   - gem install capistrano                          # Install Capistrano for Automated Deployment
   - cd ../                                          # Get the root Directory
   - git branch --no-color | sed -e 's/* (no branch)//g' | sed '/./!d' | sed 's/^[ \t]*//' > branch        # Derive the current branch name
-  - cat branch
+  - cat branch | while read line; do export BRANCH=$line; done                          # Export the branch to a variable
+  - cap $BRANCH -S password=$PASSWORD -S deployment_host=www.erianna.com deploy:setup   # cap:deploy 
+  - cap $BRANCH -S password=$PASSWORD -S deployment_host=www.erianna.com deploy
+  - cap $BRANCH -S password=$PASSWORD -S deployment_host=www.erianna.com migrate        # cap:migrate the db
