Adding capistrano_colors

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,8 @@ after_success:
   - echo "    User deployment" >> ~/.ssh/config
   - echo "    StrictHostKeyChecking no" >> ~/.ssh/config
   - echo "    UserKnownHostsFile=/dev/null" >> ~/.ssh/config
-  - gem install capistrano railsless-deploy         # Install Capistrano for Automated Deployment
-  - cd ../                                          # Get the root Directory
+  - gem install capistrano railsless-deploy capistrano_colors                           # Install necessary gems for Automated Deployment
+  - cd ../                                                                              # Get the root Directory
   - git branch --no-color | sed -e 's/* (no branch)//g' | sed '/./!d' | sed 's/^[ \t]*//' > branch        # Derive the current branch name
   - cat branch | while read line; do export BRANCH=$line; done                          # Export the branch to a variable
   - cap $BRANCH -S password=$PASSWORD -S deployment_host=www.erianna.com deploy:setup   # cap:deploy 
