Updating gitignore to allow easier development

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 .project
 *sublime*
 /protected/config/*
+/protected/modules/*
+/themes/*
+!/themes/default
+!/protected/modules/admin
+!/protected/modules/hybridauth
 .htaccess
 /uploads/*
 /install.php
