Installer now depends on Composer to be run, and now runs 100% in Yii. Updating TravisCI configuration, and Composer configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 language: php
 
-branches:
-  only:
-    - master
-    - 1.9.0
-        
 php:
   - 5.2
   - 5.3
@@ -21,13 +16,10 @@ notifications:
   email:
     on_success: change
     on_failure: never
-                                                    # Install the necessary scripts for running the unit tests
+    
 before_script:
-  - pear channel-discover pear.phpunit.de | cat     # Selinium/PHPUnit Channel
-  - pear install phpunit/PHPUnit_Selenium | cat     # Add Selinium
+  - composer self-update
+  - composer install
   - mysql -e 'create database ciims_test;'          # Create Database
-  - cd protected/runtime/                           # Download Yii Framework to Runtime Directory
-  - git clone git://github.com/yiisoft/yii.git yii
-  - cd ../
   - php yiic-test.php migrate up --interactive=0    # Run Migrations
   - cd tests                                        # Navigate to the Tests Directory to run the tests
