--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,11 @@
         "ext-curl" : "*",
         "ext-mcrypt" : "*",
         "ext-openssl": "*",
+        "ext-Phar":"*",
         "ext-pdo_mysql": "*",
         "ext-PDO":"*",
         "ext-Reflection": "*",
+        "ext-zip":"*",
         "lib-curl": "*",
         "lib-pcre": "*",
         "lib-openssl": "*",
