--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ notifications:
     on_failure: never
     
 before_script:
-  - composer self-update
-  - composer install
+  - php composer.phar install
   - mysql -e 'create database ciims_test;'          # Create Database
   - php yiic-test.php migrate up --interactive=0    # Run Migrations
   - cd tests                                        # Navigate to the Tests Directory to run the tests
