--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_script:
   - php composer.phar install
   - mysql -e 'create database ciims_test;'                    # Create Database
   - php protected/yiic-test.php migrate up --interactive=0    # Run Migrations
-  - cd tests                                                  # Navigate to the Tests Directory to run the tests
+  - cd protected/tests                                        # Navigate to the Tests Directory to run the tests
