--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "ircmaxell/password-compat": "1.0.3",
         "hybridauth/hybridauth": "2.2.0.*@dev",
         "phpmailer/phpmailer": "v5.2.7",
-        "mobiledetect/mobiledetectlib": "2.7.9"
+        "mobiledetect/mobiledetectlib": "2.7.9",
+        "abraham/twitteroauth": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.13"
