--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "abraham/twitteroauth": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.0.13"
+        "phpunit/phpunit": "4.0.13",
+        "phpunit/phpunit-selenium": "1.3.3"
     }
 }
