Updating composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "CiiMS",
+    "name": "charlesportwoodii/ciims",
     "description": "A fast, simple, and easy to use blogging platform and content management system",
     "license": "MIT",
     "version" : "1.10.0-dev",
