--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "hybridauth/hybridauth": "2.2.0.*@dev",
         "phpmailer/phpmailer": "v5.2.7",
         "mobiledetect/mobiledetectlib": "2.7.9",
-        "abraham/twitteroauth": "dev-master"
+        "abraham/twitteroauth": "dev-master",
+        "charlesportwoodii/eanalytics": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.13",
