--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "charlesportwoodii/ciims",
     "description": "A fast, simple, and easy to use blogging platform and content management system",
     "license": "MIT",
-    "version" : "1.10.0-dev",
+    "version" : "1.10.0",
     "type" : "project",
     "keywords": [
         "ciims",
