--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,8 @@
         "source" : "https://github.com/charlesportwoodii/CiiMS"
     },
     "homepage": "https://www.ciims.org",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=5.3.7",
         "ext-curl" : "*",
@@ -53,9 +55,9 @@
         "phpunit/phpunit": "4.0.13",
         "phpunit/phpunit-selenium": "1.3.3"
     },
-     "extra": {
-        "installer-paths": {
-            "themes/default": ["ciims/defaulttheme"]
-        }   
+    "extra": {
+	"installer-paths": {
+		"themes/default": ["ciims/defaulttheme"]
+	}
     }
 }
