--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
     "homepage": "https://www.ciims.org",
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "repositories": [
+	{ "type" : "vcs", "url": "/var/www/defaulttheme" }
+    ],
     "require": {
         "php": ">=5.3.7",
         "ext-curl" : "*",
@@ -50,14 +53,5 @@
         "mobiledetect/mobiledetectlib": "2.7.9",
         "charlesportwoodii/eanalytics": "dev-master",
 	"ciims-themes/default": "dev-master"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.0.13",
-        "phpunit/phpunit-selenium": "1.3.3"
-    },
-    "extra": {
-	"installer-paths": {
-		"themes/default": ["ciims-themes/default"]
-	}
     }
 }
