--- a/composer.json
+++ b/composer.json
@@ -46,17 +46,20 @@
 	"composer/installers": "~1.0",
         "rackspace/php-opencloud": "v1.9.2",
         "ircmaxell/password-compat": "1.0.3",
-        "hybridauth/hybridauth": "2.2.0.*@dev",
         "phpmailer/phpmailer": "v5.2.7",
         "mobiledetect/mobiledetectlib": "2.7.9",
         "charlesportwoodii/eanalytics": "dev-master",
 	"ciims-themes/default": "dev-master",
 	"ciims-modules/dashboard": "dev-master",
-	"ciims-modules/api": "dev-master"
+	"ciims-modules/api": "dev-master",
+	"ciims-modules/install": "dev-master",
+	"ciims-modules/hybridauth": "dev-master"
     },
     "extra" : {
 	"installer-paths": {
 		"protected/modules/dashboard/": ["ciims-modules/dashboard"],
+		"protected/modules/hybridauth/": ["ciims-modules/hybridauth"],
+		"protected/modules/install/": ["ciims-modules/install"],
 		"protected/modules/api/": ["ciims-modules/api"]
 	}
     }
