--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ notifications:
 before_script:
   - php composer.phar selfupdate
   - rm composer.lock
-  - php composer.phar install
+  - composer install
   - mysql -e 'create database ciims_test;'                    # Create Database
   - echo "https://$TRAVIS_BUILD_NUMBER-$TRAVIS_BUILD_ID-$TRAVIS_JOB_ID.travis-ci.org" > protected/runtime/hostname
   - php protected/yiic-test.php migrate up --interactive=0    # Run Migrations
