--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "ircmaxell/password-compat": "1.0.3",
         "phpmailer/phpmailer": "v5.2.7",
         "mobiledetect/mobiledetectlib": "2.7.9",
-        "charlesportwoodii/eanalytics": "dev-master",
+        "charlesportwoodii/eanalytics": "1.1.2",
 	"ciims-themes/default": "3.0.1",
 	"ciims-modules/dashboard": "dev-master",
 	"ciims-modules/api": "dev-master",
