--- a/composer.json
+++ b/composer.json
@@ -41,11 +41,13 @@
         "lib-pcre": "*",
         "lib-openssl": "*",
         "yiisoft/yii": "1.1.14",
-	"composer/installers": "~1.0",
+	"composer/installers": "v1.0.13",
         "rackspace/php-opencloud": "v1.9.2",
         "ircmaxell/password-compat": "1.0.3",
         "phpmailer/phpmailer": "v5.2.7",
         "mobiledetect/mobiledetectlib": "2.7.9",
+	"phpunit/phpunit": "4.0.15",
+        "phpunit/phpunit-selenium": "1.3.3",
         "charlesportwoodii/eanalytics": "1.1.2",
 	"ciims-themes/default": "3.0.1",
 	"ciims-modules/dashboard": "dev-master",
