--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,12 @@
     },
     "homepage": "https://www.ciims.org",
     "minimum-stability": "dev",
+    "repositories": [
+         {
+            "type": "vcs",
+            "url": "https://github.com/ircmaxell/PHP-CryptLib"
+        }
+    ],
     "require": {
         "php": ">=5.3.7",
         "ext-curl" : "*",
@@ -41,19 +47,20 @@
         "lib-pcre": "*",
         "lib-openssl": "*",
         "yiisoft/yii": "1.1.14",
-	"composer/installers": "v1.0.13",
+	    "composer/installers": "v1.0.13",
         "rackspace/php-opencloud": "v1.9.2",
         "ircmaxell/password-compat": "1.0.3",
+        "CryptLib/CryptLib": "dev-master",
         "phpmailer/phpmailer": "v5.2.7",
         "mobiledetect/mobiledetectlib": "2.7.9",
-	"phpunit/phpunit": "4.0.15",
+	    "phpunit/phpunit": "4.0.15",
         "phpunit/phpunit-selenium": "1.3.3",
         "charlesportwoodii/eanalytics": "1.1.2",
-	"ciims-themes/default": "3.0.1",
-	"ciims-modules/dashboard": "dev-master",
-	"ciims-modules/api": "dev-master",
-	"ciims-modules/install": "dev-master",
-	"ciims-modules/hybridauth": "dev-master"
+        "ciims-themes/default": "3.0.1",
+        "ciims-modules/dashboard": "dev-master",
+        "ciims-modules/api": "dev-master",
+        "ciims-modules/install": "dev-master",
+        "ciims-modules/hybridauth": "dev-master"
     },
     "extra" : {
 	"installer-paths": {
