--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         },
         {
             "type": "vcs",
-            "url": "/var/www/YiiBridge"
+            "url": "https://github.com/charlesportwoodii/YiiBridge"
         }
     ],
     "require": {
