Updating codeception configs to include Db component. yiic-test is now tyiic

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
   - composer install					
   - mysql -e 'create database ciims_test;'
   - echo "https://$TRAVIS_BUILD_NUMBER-$TRAVIS_BUILD_ID-$TRAVIS_JOB_ID.travis-ci.org" > protected/runtime/hostname
-  - php protected/yiic-test.php migrate up --interactive=0
+  - php protected/tyiic.php migrate up --interactive=0
   - ./vendor/bin/codecept build
 
 script: ./vendor/bin/codecept run
