--- a/codeception.yml
+++ b/codeception.yml
@@ -11,10 +11,16 @@ settings:
     log: true
     debug: true
 modules:
-    enabled: [PhpBrowser, WebHelper, TestHelper, Yii1]
+    enabled: [PhpBrowser, WebHelper, TestHelper, Yii1, Db]
     config:
         PhpBrowser:
             url: http://localhost:8234
         Yii1:
             appPath: test.php
             url: http://localhost:8234/test.php
+        Db:
+            dsn: 'mysql:host=127.0.0.1;dbname=ciims_test'
+            user: 'ciims_test'
+            password: ''
+            populate: false
+            cleanup: false
