--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
     },
     "require-dev": {
         "codeception/codeception": ">=1.6.4",
-        "jayhealey/webception": "*",
+        "codeception/aspect-mock": "0.4.1",
         "codeception/YiiBridge": "dev-master"
     },
     "autoload": {
