--- a/composer.json
+++ b/composer.json
@@ -65,8 +65,7 @@
         "ciims-modules/hybridauth": "2.0.3"
     },
     "require-dev": {
-        "codeception/codeception": ">=1.6.4",
-        "codeception/aspect-mock": "0.4.1",
+        "codeception/codeception": "1.8.5",
         "codeception/YiiBridge": "dev-master"
     },
     "autoload": {
