--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
         "ciims-modules/hybridauth": "2.0.3"
     },
     "require-dev": {
-        "codeception/codeception": "1.8.5",
+        "codeception/codeception": "*",
         "codeception/YiiBridge": "dev-master"
     },
     "autoload": {
