--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,12 @@ notifications:
     on_failure: never
     
 before_script:
-  - rm composer.lock
   - composer selfupdate
-  - composer install					
+  - composer update
+  - php -i				
   - mysql -e 'create database ciims_test;'
   - echo "https://$TRAVIS_BUILD_NUMBER-$TRAVIS_BUILD_ID-$TRAVIS_JOB_ID.travis-ci.org" > protected/runtime/hostname
   - php protected/tyiic.php migrate up --interactive=0
-  - ./vendor/bin/codecept build || true
+  - ./vendor/bin/codecept build
 
 script: ./vendor/bin/codecept run
