--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         "phpmailer/phpmailer": "v5.2.7",
         "mobiledetect/mobiledetectlib": "2.7.9",
         "charlesportwoodii/eanalytics": "1.1.2",
-        "ciims-themes/default": "3.0.3",
+        "ciims-themes/default": "dev-master",
         "ciims-modules/dashboard": "dev-master",
         "ciims-modules/api": "1.0.3",
         "ciims-modules/install": "2.0.3",
