--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,7 @@
         "ciims-modules/dashboard": "dev-master",
         "ciims-modules/api": "dev-master",
         "ciims-modules/install": "2.0.4",
-        "ciims-modules/hybridauth": "2.0.4",
+        "ciims-modules/hybridauth": "2.0.4"
     },
     "require-dev": {
         "codeception/codeception": "dev-master",
