--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - hhvm
+#  - hhvm
 
 matrix:
   allow_failures:
-    - php: hhvm
+#    - php: hhvm
     - php: 5.3
     - php: 5.6
 
