Updating composer.json, dependencies, README

--- a/composer.json
+++ b/composer.json
@@ -81,10 +81,10 @@
         "gtcode/yii-newrelic": "dev-master",
         "yiqing-95/YiiTimeAgo": "dev-master",
         "charlesportwoodii/eanalytics": "1.1.4",
-        "ciims-themes/default": "dev-master",
-	   "ciims-modules/dashboard": "dev-3.0.0-dev",
+        "ciims-themes/default": "3.0.8",
+	"ciims-modules/dashboard": "dev-3.0.0-dev",
         "ciims-modules/api": "dev-2.0.0-dev",
-        "ciims-modules/install": "dev-master",
+        "ciims-modules/install": "2.0.5",
         "ciims-modules/hybridauth": "2.0.4"
     },
     "require-dev": {
