--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ php:
   - 5.4
   - 5.5
   - 5.6
-#  - hhvm
 
 matrix:
   allow_failures:
@@ -26,8 +25,9 @@ before_script:
   - composer selfupdate
   - composer install # Install rather than update
   - php -i
-  - mysql -e 'create database ciims_test;'
+  - mysql -e 'create database ciims_travis;'
   - echo "2.0.0-dev" > protected/config/VERSION
-  - php protected/yiic.php migrate up --interactive=0
+  - php protected/yiic.php installer index --dbHost=127.0.0.1 --dbName=ciims_travis --dbUsername=root --dbPassword="" --adminEmail="travis@ciims.io" --adminPassword=travis --adminUsername=travis --siteName="CiiMS :: Travis CI"
+
 
 script: ./vendor/bin/codecept run
