--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
         "lib-openssl": "*",
         "yiisoft/yii": "1.1.15",
         "composer/installers": "v1.0.19",
+        "hashids/hashids": "1.0.4",
         "Codeception/YiiBridge": "dev-master",
         "rackspace/php-opencloud": "v1.12.1",
         "ircmaxell/password-compat": "1.0.3",
@@ -67,7 +68,7 @@
         "phpmailer/phpmailer": "v5.2.9",
         "knplabs/packagist-api": "v1.2",
         "charlesportwoodii/yii-newrelic": "1.0.0",
-	"yiqing-95/YiiTimeAgo": "dev-master",
+	    "yiqing-95/YiiTimeAgo": "dev-master",
         "charlesportwoodii/eanalytics": "1.1.4",
         "ciims-themes/default": "3.0.12",
         "ciims-modules/dashboard": "3.0.5",
