Yii2 Debug bar now supercedes previous debug tools

--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,8 @@
     },
     "require-dev": {
         "codeception/codeception": "2.0.*",
-        "codeception/YiiBridge": "dev-master"
+        "codeception/YiiBridge": "dev-master",
+        "zhuravljov/yii2-debug": "v1.4"
     },
     "autoload": {
         "psr-0": {
