Optimized autoload for Cii components

--- a/composer.json
+++ b/composer.json
@@ -66,10 +66,10 @@
         "CryptLib/CryptLib": "dev-master",
         "phpmailer/phpmailer": "v5.2.9",
         "knplabs/packagist-api": "v1.2",
-	"yiqing-95/YiiTimeAgo": "dev-master",
+        "yiqing-95/YiiTimeAgo": "dev-master",
         "charlesportwoodii/eanalytics": "1.1.5",
         "charlesportwoodii/yii-newrelic": "1.0.0",
-	"charlesportwoodii/cii": "dev-master",
+        "charlesportwoodii/cii": "dev-master",
         "ciims-themes/default": "3.0.13",
         "ciims-modules/dashboard": "3.0.12",
         "ciims-modules/api": "2.0.10",
@@ -88,10 +88,18 @@
     },
     "extra": {
         "installer-paths": {
-            "protected/modules/dashboard/": ["ciims-modules/dashboard"],
-            "protected/modules/hybridauth/": ["ciims-modules/hybridauth"],
-            "protected/modules/install/": ["ciims-modules/install"],
-            "protected/modules/api/": ["ciims-modules/api"]
+            "protected/modules/dashboard/": [
+                "ciims-modules/dashboard"
+            ],
+            "protected/modules/hybridauth/": [
+                "ciims-modules/hybridauth"
+            ],
+            "protected/modules/install/": [
+                "ciims-modules/install"
+            ],
+            "protected/modules/api/": [
+                "ciims-modules/api"
+            ]
         }
     }
 }
