--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ language: php
 php:
   - 5.5
   - 5.6
+  - 7
+  - nightly
 
 matrix:
   allow_failures:
-    - php: hhvm
+    - php: hhvm, 7, nightly
 
 services:
   - memcached
