--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ php:
   - 5.5
   - 5.6
   - 7
-  - nightly
 
 matrix:
   allow_failures:
-    - php: hhvm, 7, nightly
+    - php: 7
 
 services:
   - memcached
