--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 sudo: false # Use TravisCI new Docker container infrastructure
 
+env:
+  global:
+    - "ARTIFACTS_AWS_REGION=us-east-1"
+    - "ARTIFACTS_S3_BUCKET=travis-s3-us-01"
+    - secure: ZhvRET5CEgYtZY5z8nUDjcpqthkVb6yc/qBi/re+EOaLgx1nVFSf5G6uHEVqlzNka5F67KT+kV0Ph3WqoT9d3X10IAiH2cdvG/gsZxJi8pXn+A0A1f9I4wnsvlSDmgHG46JjWb7nz6VqKb5WC54eVEEZ2kPlkQPmXZ5r9QbanCs=
+    - secure: ioXW769alaD/b2QrPyzRgRV/k/7p5TmtuRDKQmLFa5wcAkLiuWa6VzaMMdc5VroK4hEsMvJdxJJtrneZEyPluiVntL59TW5OO5OzDVrxZInlXRLCW1jSwi2BkzdezNfS5g6X3nv3d/YOz4pci/KbLmiDVwOt+LWEjymOqLarVpA=
+
 language: php
 
 php:
@@ -22,6 +29,7 @@ notifications:
     on_failure: change
     
 before_script:
+  - "gem install travis-artifacts" # Install TravisCI Artifacts gem
   - composer selfupdate
   - composer install # Install rather than update
   - php -i
@@ -29,5 +37,10 @@ before_script:
   - echo "2.0.0-dev" > protected/config/VERSION
   - php index.php installer index --dbHost=127.0.0.1 --dbName=ciims_travis --dbUsername=root --dbPassword="" --adminEmail="travis@ciims.io" --adminPassword=travis --adminUsername=travis --siteName="CiiMS - Travis CI"
 
+after_failure: # this will of course run only on failure
+  - "travis-artifacts upload --path protected/runtime/application.log"
+
+after_test:
+  - "travis-artifacts upload --target-path artifacts/$TRAVIS_BUILD_ID/$TRAVIS_JOB_ID"
 
 script: ./vendor/bin/codecept run
