--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,6 @@ php:
   - 5.6
   - 7
 
-matrix:
-  allow_failures:
-    - php: 7
-
 services:
   - memcached
   - redis
@@ -37,7 +33,7 @@ before_script:
   - echo "2.0.0-dev" > protected/config/VERSION
   - php index.php installer index --dbHost=127.0.0.1 --dbName=ciims_travis --dbUsername=root --dbPassword="" --adminEmail="travis@ciims.io" --adminPassword=travis --adminUsername=travis --siteName="CiiMS - Travis CI"
 
-after_failure: # this will of course run only on failure
+after_script: # this will of course run only on failure
   - "travis-artifacts upload --path protected/runtime/application.log"
 
 after_test:
