--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ env:
 
 language: php
 
+cache:
+  directories:
+    - vendor/
+
 php:
   - 5.5
   - 5.6
@@ -33,8 +37,7 @@ before_script:
   - echo "2.0.0-dev" > protected/config/VERSION
   - php index.php installer index --dbHost=127.0.0.1 --dbName=ciims_travis --dbUsername=root --dbPassword="" --adminEmail="travis@ciims.io" --adminPassword=travis --adminUsername=travis --siteName="CiiMS - Travis CI"
 
-after_script: # this will of course run only on failure
-  - "ls -laht protected/runtime"
+after_failure: # Upload the application.log on failure
   - "travis-artifacts upload --path protected/runtime/application.log"
 
 script: ./vendor/bin/codecept run
