--- a/composer.json
+++ b/composer.json
@@ -69,10 +69,11 @@
         "charlesportwoodii/yii-newrelic": "1.0.0",
         "charlesportwoodii/cii": "1.0.10",
         "ciims-themes/default": "3.0.15",
-        "ciims-modules/dashboard": "3.0.17",
+        "ciims-modules/dashboard": "3.0.18",
         "ciims-modules/api": "2.0.16",
         "ciims-modules/install": "2.0.10",
-        "ciims-modules/hybridauth": "2.0.6"
+        "ciims-modules/hybridauth": "2.0.6",
+	"ciims-plugins/awsuploader": "1.0.0"
     },
     "require-dev": {
         "codeception/codeception": "2.0.*",
