--- a/composer.json
+++ b/composer.json
@@ -67,18 +67,18 @@
         "yiqing-95/YiiTimeAgo": "dev-master",
         "charlesportwoodii/eanalytics": "1.1.5",
         "charlesportwoodii/yii-newrelic": "1.0.0",
-        "charlesportwoodii/cii": "1.0.10",
+        "charlesportwoodii/cii": "1.0.11",
         "ciims-themes/default": "3.0.15",
         "ciims-modules/dashboard": "3.0.19",
         "ciims-modules/api": "2.0.16",
         "ciims-modules/install": "2.0.10",
         "ciims-modules/hybridauth": "2.0.6",
-	"ciims-plugins/awsuploader": "1.0.1"
+        "ciims-plugins/awsuploader": "1.0.1",
+        "zhuravljov/yii2-debug": "v1.4"
     },
     "require-dev": {
         "codeception/codeception": "2.0.*",
-        "codeception/YiiBridge": "dev-master",
-        "zhuravljov/yii2-debug": "v1.4"
+        "codeception/YiiBridge": "dev-master"
     },
     "autoload": {
         "psr-0": {
